Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43898

WebContentsAdapter::initialize might hold a ref on the wrong BrowserContextAdapter after a newWindowRequest

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.0
    • WebEngine
    • None
    • 315f3ccf1e8ee697688d50012307a1cb6747a6b7

    Description

      To reproduce the crash:

      • Open quicktestbrowser and find a link that opens a new tab automatically (like the Digia link at the bottom of qt.io)
      • Open that link to open in a new BrowserWindow (which creates a new WebEngineProfile)
      • Do it again to open 4-5 windows
      • Close the first window (containing all refs to the BrowserContext that was set behind the scene on the adopted content::WebContents)
      • Wait a bit, close all other windows

      Stack trace attached

      Discussed solution was to ignore with a warning when setting a different WebEngineProfile on an adopted WebEngineView.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            jturcott Jocelyn Turcotte
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes