Forbid mismatching profiles when adopting web content

To avoid crashing due to a mismatch of browser-contexts used by
webcontent and webcontent adapters and clients, we refuse to
open content in a new window witha different profile and
prints a warning so the developers may fix their software.

Change-Id: I704266a96de2d7a5f8e1fa3ccf49a50f1d2307c9
Task-number: QTBUG-43898
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>